[package]
name = "omicron-common"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[lints]
workspace = true

# NOTE:
#
# This crate is depended on by several other workspaces! Be careful of adding
# new regular or build dependencies here, as they will be added to those crates
# as well. (Dev-dependencies are fine.)

[dependencies]
anyhow.workspace = true
api_identity.workspace = true
async-trait.workspace = true
backoff.workspace = true
camino.workspace = true
chrono.workspace = true
daft.workspace = true
dropshot.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
iddqd.workspace = true
ipnetwork.workspace = true
lldp_protocol.workspace = true
macaddr.workspace = true
mg-admin-client.workspace = true
omicron-uuid-kinds.workspace = true
oxnet.workspace = true
proptest = { workspace = true, optional = true }
rand.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
schemars = { workspace = true, features = ["chrono", "semver", "uuid1"] }
semver.workspace = true
serde.workspace = true
serde_human_bytes.workspace = true
serde_json.workspace = true
serde_with.workspace = true
slog.workspace = true
slog-error-chain.workspace = true
strum.workspace = true
test-strategy = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
parse-display.workspace = true
progenitor-client.workspace = true
omicron-workspace-hack.workspace = true
regress.workspace = true
tufaceous-artifact.workspace = true

[dev-dependencies]
camino-tempfile.workspace = true
expectorate.workspace = true
libc.workspace = true
proptest.workspace = true
regress.workspace = true
serde_urlencoded.workspace = true
test-strategy.workspace = true
tokio = { workspace = true, features = ["test-util"] }
toml.workspace = true

[features]
testing = ["proptest", "test-strategy"]
