[package]
name = "crdb-seed"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
atomicwrites.workspace = true
anyhow.workspace = true
camino.workspace = true
camino-tempfile.workspace = true
dropshot.workspace = true
hex.workspace = true
omicron-test-utils.workspace = true
ring.workspace = true
slog.workspace = true
tar.workspace = true
tokio.workspace = true
omicron-workspace-hack.workspace = true
