[package]
name = "ddm-admin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"

[build-dependencies]
anyhow.workspace = true
omicron-zone-package.workspace = true
progenitor.workspace = true
quote.workspace = true
serde_json.workspace = true
toml.workspace = true
