[package]
name = "ddm-admin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"

[build-dependencies]
anyhow = "1.0"
# omicron-zone-package = "0.3.1"
omicron-zone-package = { git = "http://github.com/oxidecomputer/omicron-package", branch = "composite" }
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
quote = "1.0"
serde_json = "1.0"
toml = "0.5"
