[package]
name = "omicron-deploy"
description = "Tools for deploying Omicron software to target machines"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossbeam.workspace = true
omicron-sled-agent = { path = "../sled-agent" }
omicron-package = { path = "../package" }
serde.workspace = true
serde_derive.workspace = true
sp-sim = { path = "../sp-sim" }
sprockets-rot.workspace = true
thiserror.workspace = true
toml.workspace = true

# Disable doc builds by default for our binaries to work around issue
# rust-lang/cargo#8373.  These docs would not be very useful anyway.
[[bin]]
name = "sled-agent-overlay-files"
doc = false

[[bin]]
name = "thing-flinger"
doc = false
