[package]
name = "dns-server-api"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
dropshot.workspace = true
dropshot-api-manager-types.workspace = true
internal-dns-types.workspace = true
omicron-workspace-hack.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
