[package]
name = "dns-server"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
dns-server-api.workspace = true
dropshot.workspace = true
hickory-proto.workspace = true
hickory-resolver.workspace = true
hickory-server.workspace = true
internal-dns-types.workspace = true
omicron-common.workspace = true
oxide-tokio-rt.workspace = true
pretty-hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
slog.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "full" ] }
toml.workspace = true
uuid.workspace = true
omicron-workspace-hack.workspace = true
slog-error-chain.workspace = true

[build-dependencies]
git-stub-vcs.workspace = true

[dev-dependencies]
camino-tempfile.workspace = true
dns-service-client.workspace = true
hickory-client.workspace = true
internal-dns-types-versions.workspace = true
omicron-test-utils.workspace = true
progenitor.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde_json.workspace = true
