[package]
name = "dns-service-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
futures.workspace = true
progenitor.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
uuid.workspace = true
