[package]
name = "dpd-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
progenitor-client.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
serde.workspace = true
slog.workspace = true
regress.workspace = true
uuid.workspace = true
chrono.workspace = true

[build-dependencies]
anyhow.workspace = true
omicron-zone-package.workspace = true
progenitor.workspace = true
quote.workspace = true
rustfmt-wrapper.workspace = true
serde_json.workspace = true
toml.workspace = true
