[package]
name = "end-to-end-tests"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anstyle.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
# On Git commit for trust-dns -> hickory switch.
# Switch back to released versions of dhcproto on next release.
dhcproto = { git = "https://github.com/bluecatengineering/dhcproto.git", rev = "120da6fcd8a7be84d417d372634ead84ce07e6da" }
futures.workspace = true
hickory-resolver.workspace = true
http.workspace = true
humantime.workspace = true
internal-dns-resolver.workspace = true
internal-dns-types.workspace = true
internet-checksum.workspace = true
ispf.workspace = true
macaddr.workspace = true
nexus-lockstep-client.workspace = true
omicron-sled-agent.workspace = true
omicron-test-utils.workspace = true
omicron-uuid-kinds.workspace = true
omicron-workspace-hack.workspace = true
oxide-client.workspace = true
oxide-tokio-rt.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
russh = "0.45.0"
russh-keys = "0.45.0"
serde.workspace = true
serde_json.workspace = true
sled-agent-types.workspace = true
slog.workspace = true
slog-error-chain.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
uuid.workspace = true
