[package]
name = "gateway-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
libc.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-term.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "time" ] }
tokio-tungstenite.workspace = true
uuid = { workspace = true, features = [ "serde", "v4" ] }

gateway-client = { path = "../gateway-client" }
omicron-common = { path = "../common" }
