[package]
name = "gateway-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
serde_json = "1.0"
futures = "0.3.24"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.omicron-common]
path = "../common"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.slog]
version = "2.5"
features = [ "max_level_trace", "release_max_level_debug" ]

[dependencies.uuid]
version = "1.1.0"
features = [ "serde", "v4" ]
