[package]
name = "gateway-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
chrono.workspace = true
progenitor.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
futures.workspace = true
uuid.workspace = true

[dependencies.omicron-common]
path = "../common"
