[package]
name = "gateway-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
futures = "0.3.25"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", branch = "main" }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "stream"] }
schemars = "0.8"
serde_json = "1.0"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.omicron-common]
path = "../common"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.slog]
version = "2.5"
features = [ "max_level_trace", "release_max_level_debug" ]

[dependencies.uuid]
version = "1.2.2"
features = [ "serde", "v4" ]
