[package]
name = "gateway-messages"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags = "1.3.2"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
serde_repr = { version = "0.1" }

hubpack = { git = "https://github.com/cbiffle/hubpack", branch = "main" }

[features]
default = []
std = []
