[package]
name = "gateway-messages"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags = "1.3.2"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
serde_repr = { version = "0.1" }

hubpack = { git = "https://github.com/cbiffle/hubpack", rev = "df08cc3a6e1f97381cd0472ae348e310f0119e25" }

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = ["proto-ipv6"]
optional = true

[features]
default = ["smoltcp"]
std = []
