[package]
name = "gateway-messages"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags = "1.3.2"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde-big-array = "0.4.1"
serde_repr = { version = "0.1" }
static_assertions = "1.1.0"
uuid = { version = "1.1", default-features = false }

hubpack = { git = "https://github.com/cbiffle/hubpack", rev = "df08cc3a6e1f97381cd0472ae348e310f0119e25" }

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = ["proto-ipv6"]
optional = true

[features]
default = ["smoltcp"]
std = []
