[package]
name = "gateway-sp-comms"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"

[dependencies]
futures.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_with.workspace = true
slog.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "full" ] }
tokio-stream.workspace = true
usdt.workspace = true
uuid = { workspace = true, features = [ "serde", "v4" ] }
zip.workspace = true

gateway-messages = { path = "../gateway-messages", features = ["std"] }
omicron-common = { path = "../common" }

[dev-dependencies]
omicron-test-utils = { path = "../test-utils" }
