[package]
name = "gateway-test-utils"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
camino.workspace = true
dropshot.workspace = true
gateway-client.workspace = true
gateway-messages.workspace = true
gateway-types.workspace = true
omicron-gateway.workspace = true
omicron-test-utils.workspace = true
qorb.workspace = true
slog.workspace = true
sp-sim.workspace = true
tokio.workspace = true
uuid.workspace = true
omicron-workspace-hack.workspace = true
