[package]
name = "omicron-gateway"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
async-trait.workspace = true
clap.workspace = true
crucible-smf.workspace = true
dropshot.workspace = true
futures.workspace = true
gateway-messages.workspace = true
gateway-sp-comms.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
omicron-common.workspace = true
once_cell.workspace = true
schemars.workspace = true
serde.workspace = true
signal-hook.workspace = true
signal-hook-tokio.workspace = true
slog.workspace = true
slog-dtrace.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
expectorate.workspace = true
omicron-test-utils.workspace = true
openapi-lint.workspace = true
openapiv3.workspace = true
serde_json.workspace = true
sp-sim.workspace = true
subprocess.workspace = true

[[bin]]
name = "mgs"
doc = false
