[package]
name = "omicron-gateway"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
camino.workspace = true
clap.workspace = true
dropshot.workspace = true
futures.workspace = true
gateway-api.workspace = true
gateway-messages.workspace = true
gateway-sp-comms.workspace = true
gateway-types.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
illumos-utils.workspace = true
ipcc.workspace = true
omicron-common.workspace = true
once_cell.workspace = true
schemars.workspace = true
serde.workspace = true
signal-hook.workspace = true
signal-hook-tokio.workspace = true
slog.workspace = true
slog-dtrace.workspace = true
slog-error-chain.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
uuid.workspace = true
omicron-workspace-hack.workspace = true

[dev-dependencies]
expectorate.workspace = true
gateway-test-utils.workspace = true
omicron-test-utils.workspace = true
openapi-lint.workspace = true
openapiv3.workspace = true
serde_json.workspace = true
sp-sim.workspace = true
subprocess.workspace = true

[[bin]]
name = "mgs"
doc = false
