[package]
name = "omicron-git-version"
description = "A tiny crate for obtaining the current Git version"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_with.workspace = true
omicron-workspace-hack.workspace = true

[build-dependencies]
vergen-gitcl.workspace = true

[lints]
workspace = true
