[package]
name = "id-map"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[dependencies]
daft.workspace = true
derive-where.workspace = true
schemars.workspace = true
serde.workspace = true
omicron-workspace-hack.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
test-strategy.workspace = true

[lints]
workspace = true
