[package]
name = "illumos-utils"
description = "Utilities/wrappers for illumos"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bhyve_api.workspace = true
byteorder.workspace = true
camino.workspace = true
cfg-if.workspace = true
debug-ignore.workspace = true
futures.workspace = true
helios-fusion.workspace = true
ipnetwork.workspace = true
itertools.workspace = true
libc.workspace = true
macaddr.workspace = true
omicron-common.workspace = true
oxide-vpc.workspace = true
schemars.workspace = true
serde.workspace = true
shlex.workspace = true
slog.workspace = true
smf.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zone.workspace = true

[target.'cfg(target_os = "illumos")'.dependencies]
opte-ioctl.workspace = true

[dev-dependencies]
helios-tokamak.workspace = true
omicron-test-utils.workspace = true
regress.workspace = true
serde_json.workspace = true
toml.workspace = true
