[package]
name = "illumos-utils"
description = "Utilities/wrappers for illumos"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bhyve_api.workspace = true
byteorder.workspace = true
camino.workspace = true
camino-tempfile.workspace = true
cfg-if.workspace = true
crucible-smf.workspace = true
debug-ignore.workspace = true
dropshot.workspace = true
futures.workspace = true
http.workspace = true
iddqd.workspace = true
ipnetwork.workspace = true
itertools.workspace = true
libc.workspace = true
macaddr.workspace = true
omicron-common.workspace = true
omicron-uuid-kinds.workspace = true
oxide-vpc.workspace = true
oxlog.workspace = true
oxnet.workspace = true
schemars.workspace = true
serde.workspace = true
slog.workspace = true
slog-error-chain.workspace = true
smf.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
whoami.workspace = true
zone.workspace = true

omicron-workspace-hack.workspace = true

[target.'cfg(target_os = "illumos")'.dependencies]
opte-ioctl.workspace = true

[dev-dependencies]
omicron-test-utils.workspace = true
regress.workspace = true
serde_json.workspace = true
toml.workspace = true

[features]
testing = []
