[package]
name = "installinator-api"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
dropshot.workspace = true
dropshot-api-manager-types.workspace = true
hyper.workspace = true
installinator-common.workspace = true
omicron-common.workspace = true
omicron-uuid-kinds.workspace = true
omicron-workspace-hack.workspace = true
schemars.workspace = true
serde.workspace = true
slog.workspace = true
tufaceous-artifact.workspace = true
uuid.workspace = true
